--- a/src/Web/Client/Pages/Employees.razor
+++ b/src/Web/Client/Pages/Employees.razor
@@ -55,7 +55,7 @@ else
         <MudLink Href="@($"tel:{_getEmployee.PhoneNumber}")">@_getEmployee.PhoneNumber</MudLink>
     </MudStack>
 
-    <EmployeeAssign />
+    <EmployeeAssign UserName="@UserName" />
 }
 
 
