Fix commented code

--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -99,7 +99,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        @* Elements = await AssetsService.GetAssetSerials(); *@
+        Elements = await AssetsService.GetAssetSerials();
     }
 
     private async Task OnAssetSerialHasChanged()
