Add pagination to assets page

--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -11,7 +11,7 @@
 @attribute [Authorize]
 
 <PageTitle>Assets</PageTitle>
-<MudTable Items="@Elements" Hover="true" Dense="true" FixedHeader="true" T="GetAssetSerial" OnRowClick="OnSerialSelect">
+<MudTable @ref=_table ServerData="@(new Func<TableState, Task<TableData<GetAssetSerial>>>(LoadSerials))" Items="@Elements" Hover="true" Dense="true" FixedHeader="true" T="GetAssetSerial" OnRowClick="OnSerialSelect">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Assets</MudText>
         <MudChip Href="/assets/purchase" Color="Color.Primary">New</MudChip>
@@ -71,6 +71,9 @@
             <MudTd DataLabel="From">@context.From.ToString("dd MMMM yyyy")</MudTd>
         }
     </RowTemplate>
+    <PagerContent>
+        <MudTablePager PageSizeOptions="new int[] {1,2,3,4,5,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30}" />
+    </PagerContent>
 </MudTable>
 
 @if (Serial is not null)
@@ -82,14 +85,14 @@
 
     [Parameter] public string? Serial { get; set; }
     private string searchString1 = "";
+    private MudTable<GetAssetSerial> _table = null!;
     private bool loading = false;
     private IEnumerable<GetAssetSerial> Elements = new List<GetAssetSerial>(Enumerable.Range(1, 5).Select(x => new GetAssetSerial()));
 
-    protected override async Task OnInitializedAsync()
+    protected override Task OnAfterRenderAsync(bool firstRender)
     {
-        loading = true;
-        Elements = await AssetsService.GetAssetSerials();
-        loading = false;
+        _table.SetRowsPerPage(10);
+        return base.OnAfterRenderAsync(firstRender);
     }
 
     private void OnSerialSelect(TableRowClickEventArgs<GetAssetSerial> args)
@@ -105,7 +108,15 @@
     private async Task OnAssetSerialHasChanged()
     {
         loading = true;
-        Elements = await AssetsService.GetAssetSerials();
+        Elements = (await AssetsService.GetPagedAssetSerials(_table.CurrentPage, _table.RowsPerPage)).Data;
         loading = false;
     }
-}
+
+    private async Task<TableData<GetAssetSerial>> LoadSerials(TableState state)
+    {
+        loading = true;
+        var result = await AssetsService.GetPagedAssetSerials(state.Page, state.PageSize);
+        loading = false;
+        return new TableData<GetAssetSerial>() { Items = result.Data, TotalItems = result.TotalCount };
+    }
+}   
