--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -72,7 +72,7 @@
         }
     </RowTemplate>
     <PagerContent>
-        <MudTablePager PageSizeOptions="new int[] {1,2,3,4,5,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30}" />
+        <MudTablePager />
     </PagerContent>
 </MudTable>
 
@@ -88,12 +88,6 @@
     private MudTable<GetAssetSerial> _table = null!;
     private bool loading = false;
     private IEnumerable<GetAssetSerial> Elements = new List<GetAssetSerial>(Enumerable.Range(1, 5).Select(x => new GetAssetSerial()));
-
-    protected override Task OnAfterRenderAsync(bool firstRender)
-    {
-        _table.SetRowsPerPage(10);
-        return base.OnAfterRenderAsync(firstRender);
-    }
 
     private void OnSerialSelect(TableRowClickEventArgs<GetAssetSerial> args)
     {
