--- a/src/Web/Client/Shared/AssetSerialHistory.razor
+++ b/src/Web/Client/Shared/AssetSerialHistory.razor
@@ -28,10 +28,10 @@
     else
     {
         <MudText><b>Logs</b></MudText>
-        <MudTimeline TimelineAlign="TimelineAlign.Default">
+        <MudTimeline TimelineAlign="TimelineAlign.Default" Class="mt-2 mb-2">
             @foreach (var history in Histories)
             {
-                <MudTimelineItem Size="Size.Small" Color="@GetTimelineItemColor(history.Status)" TimelineAlign="GetTimelineAlign(history)">
+                <MudTimelineItem Size="Size.Small" Color="@GetTimelineItemColor(history.Status)" TimelineAlign="TimelineAlign.End">
                     <ItemOpposite>
                         <MudText Color="@GetTimelineItemColor(history.Status)" Typo="Typo.subtitle2">@history.Status</MudText>
                     </ItemOpposite>
@@ -45,7 +45,7 @@
                 </MudTimelineItem>
                 counter++;
             }
-            </MudTimeline>
+        </MudTimeline>
     }
 }
 
@@ -72,7 +72,8 @@
             AssetStatus.Available => Color.Success,
             AssetStatus.Taken => Color.Info,
             AssetStatus.Broken => Color.Error,
-            AssetStatus.Deprecated => Color.Default
+            AssetStatus.Deprecated => Color.Default,
+            _ => Color.Default
         };
     }
 
