--- a/src/Web/Client/Shared/EmployeeAssign.razor
+++ b/src/Web/Client/Shared/EmployeeAssign.razor
@@ -74,7 +74,8 @@
 
 @code {
     private List<GetEmployeeAssetSerials> Elements = new List<GetEmployeeAssetSerials>();
-    private List<GetAssetTypeSerial> AssetTypeSerials = new List<GetAssetTypeSerial>();
+    [Parameter] public List<GetAssetTypeSerial> AssetTypeSerials {get; set;} = null!;
+    [Parameter] public Func<Task> UpdateAssetTypeSerials {get; set;} = null!;
     private List<GetAssetSerials> AssetSerials = [];
 
     [Parameter] public string UserName { get; set; } = null!;
@@ -87,7 +88,6 @@
     protected override async Task OnInitializedAsync()
     {
         Elements = await EmployeesService.GetEmployeeAssetsSerials(UserName);
-        AssetTypeSerials = await AssetTypesService.GetAssetTypeSerials();
     }
 
     private void TogglePopover()
@@ -118,7 +118,8 @@
         });
 
         Elements = await EmployeesService.GetEmployeeAssetsSerials(UserName);
-        AssetTypeSerials = await AssetTypesService.GetAssetTypeSerials();
+        await UpdateAssetTypeSerials.Invoke();
+        AssetTypeSerials.Remove(AssetTypeSerials.First(x => x.AssetSerials.Any(a => a.Id == assetSerialId)));
         showAssetTypes = true;
     }
 }
